--- a/index.html
+++ b/index.html
@@ -137,25 +137,19 @@
         <div class="col-4 mt-4">
           <p>Música: Telepatia</p>
           <p>Cantor: Sol</p>
-          <audio src="telepatia.mp3"><span class="material-symbols-outlined">
-            play_circle
-            </span></audio>
+          <audio src="telepatia.mp3"><img src="play.png"></audio>
         </div>
 
         <div class="col-4 mt-4">
           <p>Música: Carne de Sol</p>
           <p>Cantor: SaintLuan</p>
-          <audio src="carnedesol.mp3"><span class="material-symbols-outlined">
-            play_circle
-            </span></audio>
+          <audio src="carnedesol.mp3"><img src="play.png"></audio>
         </div>
 
         <div class="col-4 mt-4">
           <p>Música: Cordas</p>
           <p>Cantor: Pedro Salim</p>
-          <audio src="cordas.mp3"><span class="material-symbols-outlined">
-            play_circle
-            </span></audio>
+          <audio src="cordas.mp3"><img src="play.png"></audio>
         </div>
 
       </div>
