--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="col-4 mt-4">
           <p>Música: Carne de Sol</p>
           <p>Cantor: SaintLuan</p>
-          <audio src="carnedesol.mp3"><img src="play.png"></audio>
+          <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1797682906&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/ostalo" title="OSTALO" target="_blank" style="color: #cccccc; text-decoration: none;">OSTALO</a> · <a href="https://soundcloud.com/ostalo/carne-de-sol-luan-santos" title="Carne de Sol - Luan Santos" target="_blank" style="color: #cccccc; text-decoration: none;">Carne de Sol - Luan Santos</a></div>
         </div>
 
         <div class="col-4 mt-4">
