--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="col-4 mt-4">
           <p>Música: Telepatia</p>
           <p>Cantor: Sol</p>
-          <audio src="telepatia.mp3"><img src="play.png"></audio>
+          <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1797685039&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/ostalo" title="OSTALO" target="_blank" style="color: #cccccc; text-decoration: none;">OSTALO</a> · <a href="https://soundcloud.com/ostalo/telepatia-mix-final-1" title="Telepatia - Sol" target="_blank" style="color: #cccccc; text-decoration: none;">Telepatia - Sol</a></div>
         </div>
 
         <div class="col-4 mt-4">
@@ -149,8 +149,7 @@
         <div class="col-4 mt-4">
           <p>Música: Cordas</p>
           <p>Cantor: Pedro Salim</p>
-          <audio src="cordas.mp3"><img src="play.png"></audio>
-        </div>
+          <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1797685471&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/ostalo" title="OSTALO" target="_blank" style="color: #cccccc; text-decoration: none;">OSTALO</a> · <a href="https://soundcloud.com/ostalo/cordas-16r" title="Cordas - Pedro Salim" target="_blank" style="color: #cccccc; text-decoration: none;">Cordas - Pedro Salim</a></div>        </div>
 
       </div>
 
