--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-          <h2 class="hero-title">Hello, my name is Pedro</h2>
-          <p class="hero-desc">I'm a sound and image producer, living in Juiz de Fora, Brazil</p>
+          <h2 class="hero-title">Hello, my name is Pedro </h2>
+          <p class="hero-desc">I´m a sound and image producer, living in Juiz de Fora, Brazil</p>
         </div>
       </div>
     </div>
@@ -72,7 +72,7 @@
         </div>
         <div class="col-lg-8">
           <div class="mt-3">
-            <p>I was born in may 1985, and graduated in Cinema, Television and Digital Medias in 2005. Also I studied Journalism for 3 years. My master degree is in movie direction, concluded in Paris, 2008. Another master degree is in Social Ecology, concluded in Rio de Janeiro, 2015. Nowadays I am studying Sound Engineering and Computar programing.</p>
+            <p>I was born in may 1985, and graduated in Cinema, Television and Digital Medias in 2005. My master degree is in movie direction, concluded in Paris, 2008. Another master degree is in Social Ecology, concluded in Rio de Janeiro, 2015. Nowadays I am studying Sound Engineering and Computer programing.</p>
           </div>
           <div class="mt-3">
             <div class="col-md-6">
@@ -80,11 +80,12 @@
                 <li>Pedro Salim Miranda</li>
                 <li>38 years old</li>
                 <li>videomaker</li>
+                <li>music producer</li>
               </ul>
             </div>
           </div>
           <div class="mt-3">
-            <p>With 20 years of experience as video editor, I specialized in video-projection for spectacles, mainly for theater. Also I worked for television in several shows: about literature, turism, cooking and the news. I am also a musician and a sound technician, beeing able to record music tracks.</p>
+            <p>With 20 years of experience as video editor, I specialized in video-projection for spectacles, mainly for theater. Also I worked for television in several shows: about literature, turism, cooking and the news. I am also a musician and a sound technician, beeing able to record music tracks. Since 2017 I own my label JFK7, in which I produce independent artists from the local scene.</p>
          </div>
       </div>
     </div>
@@ -152,8 +153,6 @@
           <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1797685471&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/ostalo" title="OSTALO" target="_blank" style="color: #cccccc; text-decoration: none;">OSTALO</a> · <a href="https://soundcloud.com/ostalo/cordas-16r" title="Cordas - Pedro Salim" target="_blank" style="color: #cccccc; text-decoration: none;">Cordas - Pedro Salim</a></div>        </div>
 
       </div>
-
-
     </div>
   </section>
 
