--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   <section id="audios">
     <div class="sites mt-4 pt-4">
       <h1 class="text-center">Audios</h1>
-      <p class="text-center">Gravação e Mixagem</p>
+      <p class="text-center">Recording and Mixing</p>
       <div class="row">
         
         <div class="col-lg-4 mt-4">
