--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- linking css file -->
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   <!-- bootstrap CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -150,17 +149,18 @@
         </div>
 
         <div class="col-lg-6 mt-4">
+          <p>Música: Cordas</p>
+          <p>Autor: Pedro Salim</p>
+          <p>2022</p>
+          <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1797685471&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/ostalo" title="OSTALO" target="_blank" style="color: #cccccc; text-decoration: none;">JFK7</a> · <a href="https://soundcloud.com/ostalo/cordas-16r" title="Cordas - Pedro Salim" target="_blank" style="color: #cccccc; text-decoration: none;">Cordas - Pedro Salim</a></div>
+        </div>
+
+        <div class="col-lg-6 mt-4">
           <p>Música: Morféticos</p>
           <p>Autor: Donizette</p>
           <p>2022</p>
           <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/7KfrlWpQrP0WvNk4twFE2u?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
-
-        <div class="col-lg-6 mt-4">
-          <p>Música: Cordas</p>
-          <p>Autor: Pedro Salim</p>
-          <p>2022</p>
-          <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1797685471&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/ostalo" title="OSTALO" target="_blank" style="color: #cccccc; text-decoration: none;">JFK7</a> · <a href="https://soundcloud.com/ostalo/cordas-16r" title="Cordas - Pedro Salim" target="_blank" style="color: #cccccc; text-decoration: none;">Cordas - Pedro Salim</a></div>        </div>
 
       </div>
     </div>
