--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg fixed-top navbarScroll">
-    <a class="navbar-brand" href="x">Pedro Salim</a>
+    <a class="navbar-brand" href="http://pedrosalimportifolio.vercel.app">Pedro Salim</a>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto">
@@ -71,20 +71,20 @@
         </div>
         <div class="col-lg-8">
           <div class="mt-3">
-            <p>I was born in may 1985, and graduated in Cinema, Television and Digital Medias in 2005. My master degree is in movie direction, concluded in Paris, 2008. Another master degree is in Social Ecology, concluded in Rio de Janeiro, 2015. Nowadays I am studying Sound Engineering and Computer programing.</p>
+            <p>I was born in May 1985, and graduated in Cinema, Television and Digital Medias in 2005. My master degree is in movie direction, at Université Paris VIII Seine-Saint Denis, 2008. Another master degree is in Social Ecology, at Universidade Federal do Rio de Janeiro, 2015. Nowadays I am studying Sound Engineering and Computer programing.</p>
           </div>
           <div class="mt-3">
             <div class="col-md-6">
               <ul>
                 <li>Pedro Salim Miranda</li>
-                <li>38 years old</li>
+                <li>39 years old</li>
                 <li>videomaker</li>
                 <li>music producer</li>
               </ul>
             </div>
           </div>
           <div class="mt-3">
-            <p>With 20 years of experience as video editor, I specialized in video-projection for spectacles, mainly for theater. Also I worked for television in several shows: about literature, turism, cooking and the news. I am also a musician and a sound technician, beeing able to record music tracks. Since 2020 I own my label JFK7, in which I produce independent artists from the local scene.</p>
+            <p>With 20 years of experience as video editor, I specialized in video-projection for spectacles, mainly for theater, working for directors such as Marília Pêra, and José Celso Corrêia Martinez, at Teatro Oficina (São Paulo). Also I worked for television in several shows: about literature (Livros que Amei - FUTURA), turism (Ailleurs Tv - CLPTV), cooking (Diário do Olivier - GNT) and the news (Globo - filiada local). I am also a musician and a sound technician, beeing able to record music tracks. Since 2020 I own my label JFK7, in which I produce independent artists from the local scene.</p>
          </div>
       </div>
     </div>
@@ -163,6 +163,13 @@
         </div>
 
       </div>
+
+      <p class="text-center">Composing and Singing</p>
+
+      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/6HtKUhPoPxBXbC9nVwFYxk?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/3f0NqE38KIn57oulAzoNvb?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+      
     </div>
   </section>
 
