--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
           </div>
           <div class="mt-3">
-            <p>With 20 years of experience as video editor, I specialized in video-projection for spectacles, mainly for theater, working for directors such as Marília Pêra, and José Celso Corrêia Martinez, at Teatro Oficina (São Paulo). Also I worked for television in several shows: about literature (Livros que Amei - FUTURA), turism (Ailleurs Tv - CLPTV), cooking (Diário do Olivier - GNT) and the news (Globo - filiada local). I am also a musician and a sound technician, beeing able to record music tracks. Since 2020 I own my label JFK7, in which I produce independent artists from the local scene.</p>
+            <p>With 20 years of experience as video editor, I specialized in video-projection for spectacles, mainly for theater, working for directors such as Marília Pêra, and José Celso Corrêia Martinez, at Teatro Oficina (São Paulo). Also I worked for television in several shows: about literature (Livros que Amei - FUTURA), tourism (Ailleurs Tv - CLPTV), cooking (Diário do Olivier - GNT) and the news (Globo - afiliada local). I am also a musician and a sound technician, beeing able to record music tracks. Since 2020 I own my label JFK7, in which I produce independent artists from the local scene.</p>
          </div>
       </div>
     </div>
@@ -164,7 +164,7 @@
 
       </div>
 
-      <p class="text-center">Composing and Singing</p>
+      <h3 class="text-center">Composing and Singing</h3>
 
       <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/6HtKUhPoPxBXbC9nVwFYxk?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
