--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   <section id="audios">
     <div class="sites mt-4 pt-4">
       <h1 class="text-center">Audios</h1>
-      <p class="text-center">Recording and Mixing</p>
+      <h3 class="text-center">Recording and Mixing</h3>
       <div class="row">
         
         <div class="col-lg-6 mt-4">
