--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Portifolio Pedro Salim</title>
+  <title>Portfolio Pedro Salim</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- linking css file -->
@@ -16,7 +16,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg fixed-top navbarScroll">
-    <a class="navbar-brand" href="http://pedrosalimportifolio.vercel.app">Pedro Salim</a>
+    <a class="navbar-brand" href="http://pedrosalimportfolio.vercel.app">Pedro Salim</a>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto">
