--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
           <p>Média metragem de ficção surrealista, filmado no salar de Uyuni, na Bolívia. Direção de Fotografia, produção e atuação, 2009.</p>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/bfvyQuPwWjg?si=JTvX8CnqJ_4JgMkT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
+
+        <p>More videos at <a href="https://youtube.com/playlist?list=PLNWr_StZZ-LddTpn5sDykVwIS1RvzQ5mo&si=BY18jFqKP1DC5bKs">Youtube</a></p>
       </div>
     </div>
   </section>
